--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   transition: border 250ms ease-in-out;
+  margin: 10px auto;
 }
 .item:hover {
   border: 2px solid rgb(118, 121, 253);
